--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ header, main, footer{
     width:1440px;   
 }
 
+.section-title h2{
+	color:var(--dark-color);
+	font-weight: 700;
+	font-size: 45px;
+	margin-bottom: 24px;
+}
 
 .primary-button {
     font-weight: 600;
@@ -135,4 +141,67 @@ header, main, footer{
 }
 .quick-list-content span{
 	color: var(--primary-color);
+}
+
+
+
+.features {
+	display: grid;
+	grid-template-columns: repeat(2,1fr);
+	grid-column-gap: 145px;
+
+}
+.features-left .section-title h2 {
+	padding-left: 20px;
+	border-left: 5px solid var(--primary-color);
+}
+.feature-list-area {
+	margin-top: 30px;
+	display: grid;
+	grid-template-columns: repeat(1,1fr);
+	grid-row-gap: 20px;
+}
+.single-feature {
+	background-color: #fff;
+	box-shadow: 0px 4px 30px rgb(0 0 0 / 6%);
+	border-radius: 8px;
+	padding: 30px;
+}
+.single-feature h2 {
+	font-style: normal;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 23px;
+	margin-bottom: 10px;
+}
+.features-right {
+	position: relative;
+}
+.feature-image-footer{
+	padding: 42px 45px;
+	border-radius: 8px;
+	background-color: var(--primary-color);
+	height: 200px;
+	width: 340px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	row-gap: 5px;
+	position: absolute;
+	bottom: -80px;
+	left: -90px;
+}
+.feature-image-footer h3{
+	font-style: normal;
+	font-weight: 700;
+	font-size: 65px;
+	line-height: 1;
+	color: #FFFFFF;
+}
+.feature-image-footer p {
+	font-size: 25px;
+	color: #fff;
+	line-height: 1;
+
 }
