--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     --orange-light:#FFF4E7;
     --dark-color:#424242;
 }
-body {
+* {
     font-family: 'Work Sans', sans-serif;
     margin:0;
     padding:0;
@@ -28,7 +28,7 @@ p{
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 26px;
-	color: var(--ext-color);
+	color: var(--dark-color);
 }
 header, main, footer{
 	display: flex;
@@ -46,6 +46,9 @@ header, main, footer{
 	font-size: 45px;
 	margin-bottom: 24px;
 }
+.quick-list-area, .features-area,.some-facts-area, .our-sponsors-area, .contact-us-area{
+	margin-bottom: 130px;
+}
 
 .primary-button {
     font-weight: 600;
@@ -57,6 +60,7 @@ header, main, footer{
     border-radius: 8px;
     border:0;
     cursor: pointer;
+	margin-top: 30px;
 }
 .primary-button:hover{
     background-color: var(--secondary-color);  
@@ -93,7 +97,9 @@ header, main, footer{
 	font-size: 18px;
 	color: var(--secondary-color);
 }
-
+.primary-menu ul li a:hover {
+	color:var(--primary-color);
+}
 
 .header-bottom {
 	display: flex;
@@ -181,8 +187,6 @@ header, main, footer{
 	padding: 42px 45px;
 	border-radius: 8px;
 	background-color: var(--primary-color);
-	height: 200px;
-	width: 340px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -204,4 +208,182 @@ header, main, footer{
 	color: #fff;
 	line-height: 1;
 
+}
+
+
+
+.some-facts-list{
+	margin-top: 100px;
+	padding-bottom: 50px;
+	display: grid;
+	grid-template-columns: repeat(4,1fr);
+	grid-column-gap: 120px;
+}
+
+.single-fact h3 {
+	margin-top: 10px;
+}
+.single-fact {
+	text-align: center;
+	padding: 45px 35px 60px 35px;
+	border-radius: 8px;
+	border: 1px solid var(--primary-color);
+	transition: 0.5s;
+}
+.single-fact:hover {
+	box-shadow: 0px 4px 30px rgb(0 0 0 / 6%);
+	border-color: #FFFFFF;
+	transition: 0.5s;
+	cursor: pointer;
+}
+
+
+/* Our Sponspors Styles */
+.sponsors-logo{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+.sponsors-heading{
+	width: 540px;
+	text-align:center;
+	margin: 0 auto;
+	margin-bottom: 50px;
+}
+
+
+/*---------------------------------------
+    Contact Area              
+-----------------------------------------*/
+
+.contact {
+    margin: 100px auto;
+}
+
+.contact-heading {
+    text-align: center;
+}
+
+.contact-heading h2 {
+    border-bottom: 1px solid #383838;
+    color: #383838;
+    display: inline-block;
+    font-family: Montserrat;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+
+.contact-content-area {
+    display: flex;
+    gap: 150px;
+}
+
+.contact-form {
+    flex-basis: 65%;
+}
+
+.contact-form input,
+.contact-form textarea {
+    background-color: #efefef;
+    border: 1px solid #efefef;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    color: #737373;
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 15px;
+    padding: 15px;
+    width: 100%;
+}
+
+.contact-form input[type="submit"] {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    background-color: var(--primary-color);
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+    padding: 20px 25px;
+    cursor: pointer;
+    width: 30%;
+}
+.contact-form input[type="submit"]:hover {
+	background-color: var(--heading-color);
+}
+.contact-address>div {
+    display: flex;
+}
+
+.contact-address {
+    flex-basis: 32%;
+}
+
+.contact-phone,
+.contact-email,
+.contact-add {
+    background-color: #efefef;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    color: var(--dark-color);
+    font-family: poppins;
+    font-size: 16px;
+    font-weight: 300;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.contact-phone i,
+.contact-email i {
+    color:var(--dark-color);
+    font-size: 16pt;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.contact-phone p,
+.contact-email p,
+.contact-add p {
+    line-height: 25px;
+    margin: 0;
+}
+
+.contact-email {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.contact-add i {
+    color: var(--dark-color);
+    font-size: 16pt;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.contact-add p {
+    padding-left: 15px;
+}
+
+
+
+
+.footer-area{
+	margin-bottom: 200px;
+}
+.footer {
+	text-align: center;
+	padding: 38px;
+	border-radius: 8px;
+	background-color: var(--orange-light);
+	
+}
+
+
+.footer p {
+	color:var(--dark-color);
 }
